feat: user login/logout, jwt, redis
