# users/server/db.go
@@ -4,10 +4,11 @@ import (
 	"context"
 
 	"github.com/jackc/pgx/v5/pgxpool"
+	"github.com/redis/go-redis/v9"
 )
 
-func SetPGConn(ctx context.Context, dbLink string) (*pgxpool.Pool, error) {
-	pool, err := pgxpool.New(ctx, dbLink)
+func GetPgPool(ctx context.Context, pgLink string) (*pgxpool.Pool, error) {
+	pool, err := pgxpool.New(ctx, pgLink)
 	if err != nil {
 		return nil, err
 	}
@@ -17,4 +18,18 @@ func SetPGConn(ctx context.Context, dbLink string) (*pgxpool.Pool, error) {
 	}
 
 	return pool, nil
+}
+
+func GetRedisClient(ctx context.Context, redisLink string) (*redis.Client, error) {
+	client := redis.NewClient(&redis.Options{
+		Addr:     redisLink,
+		Password: "",
+		DB:       0,
+	})
+
+	if _, err := client.Ping(ctx).Result(); err != nil {
+		return nil, err
+	}
+
+	return client, nil
 }
